--- a/Web/03_MemberMVC/WebContent/index.html
+++ b/Web/03_MemberMVC/WebContent/index.html
@@ -13,5 +13,8 @@
 		<label>이름 : <input type="text" name="name"></label><br>
 		<input type="submit" value="회원가입">
 	</form>
+	
+	
+	<!-- 서버로 보내기 위해선 일단 폼테크에 action 그리고 연결할 키 설정 !-->
 </body>
 </html>
